--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
 		"cra-template": "1.2.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.2.1",
+		"json-server": "^1.0.0-beta.3",
 		"prettier": "^3.4.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
@@ -18,7 +19,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"json-server": "npx json-server --watch src/db.json --port 3005"
 	},
 	"eslintConfig": {
 		"extends": [
