--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
 	"name": "my-app",
 	"version": "0.1.0",
 	"private": true,
+	"type": "module",
 	"dependencies": {
 		"@hookform/resolvers": "^3.10.0",
 		"cra-template": "1.2.0",
@@ -12,6 +13,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
+		"react-router-dom": "^7.1.3",
 		"react-scripts": "5.0.1",
 		"yup": "^1.6.1"
 	},
