--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
 		"react-hook-form": "^7.54.2",
 		"react-router-dom": "^7.1.3",
 		"react-scripts": "5.0.1",
+		"redux": "^5.0.1",
 		"yup": "^1.6.1"
 	},
 	"scripts": {
